# Sentiment_Chatbot

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  사용법.md
api/: deps.py
api/routes/: analysis.py  chat.py
chains/: qa_chain.py
core/: config.py  logging.py
knowledge_base/: faq.txt
models/: sentiment.py
schema/: chat.py  sentiment.py
scripts/: build_vectorstore.py  generate_samples.py  preprocess.py  train.py
services/: chat_service.py  rag_service.py  sentiment_service.py
tests/: test_api.py  test_preprocess.py  test_sentiment.py
