[tool.poetry]
name        = "sentiment-chatbot"
version     = "0.1.0"
description = "고객 문의 감정 분석 기반 AI 챗봇 서비스"
authors     = ["Your Name <you@example.com>"]
readme      = "README.md"
package-mode = false

[tool.poetry.dependencies]
python              = ">=3.11,<3.13"

# ── 딥러닝 (torch는 별도 설치) ────────────────────────────────────────────
# poetry run pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
transformers        = "^4.40.0"
datasets            = "^2.19.0"
accelerate          = "^0.30.0"
tokenizers          = "^0.19.0"
sentencepiece       = "^0.2.0"

# ── 데이터 처리 ───────────────────────────────────────────────────────────
pandas              = "^2.2.0"
numpy               = "^1.26.0"
scikit-learn        = "^1.4.0"

# ── LangChain + RAG ──────────────────────────────────────────────────────
langchain           = "^0.3.0"
langchain-openai    = "^0.2.0"
langchain-community = "^0.3.0"
langchain-core      = "^0.3.0"
faiss-cpu           = "^1.8.0"
tiktoken            = "^0.7.0"

# ── API / UI ─────────────────────────────────────────────────────────────
fastapi             = "^0.115.0"
uvicorn             = {extras = ["standard"], version = "^0.30.0"}
python-multipart    = "^0.0.9"
gradio              = "^4.44.0"

# ── 설정 ─────────────────────────────────────────────────────────────────
pydantic            = "^2.7.0"
pydantic-settings   = "^2.3.0"
python-dotenv       = "^1.0.0"

# ── 유틸 ─────────────────────────────────────────────────────────────────
requests            = "^2.32.0"
tqdm                = "^4.66.0"
loguru              = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest              = "^8.0.0"
pytest-asyncio      = "^0.23.0"
httpx               = "^0.27.0"
ruff                = "^0.4.0"
ipykernel           = "^6.29.0"

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
pythonpath   = ["."]

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
