[tool.poetry]
name        = "sentiment-chatbot"
version     = "0.1.0"
description = "고객 문의 감정 분석 기반 AI 챗봇 서비스"
authors     = ["Your Name <you@example.com>"]
readme      = "README.md"
package-mode = true

# poetry 기본 동작은 패키지명이름과 같은 디렉터리를 찾아
# 설치하려고 합니다. 이 프로젝트는 여러 개의 최상위
# 패키지(api, models, services 등)를 갖고 있으므로
# 명시적으로 나열해 주어야 합니다.
# 설치 후 `import models` 등으로 접근할 수 있습니다.

packages = [
  { include = "api" },
  { include = "chains" },
  { include = "core" },
  { include = "models" },
  { include = "schema" },
  { include = "services" },
]


[tool.poetry.dependencies]
python              = ">=3.11,<3.13"

# ── 딥러닝 ────────────────────────────────────────────────────────────────
# torch는 플랫폼별 별도 설치 (poetry install 이후 아래 명령 실행):
#   macOS (Apple Silicon / Intel):  pip install torch torchvision
#   Linux CPU:  pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
#   Linux CUDA: pip install torch torchvision --index-url https://download.pytorch.org/whl/cu121
# transitive 의존성 충돌 방지용 상한 고정 (2.10.0은 macOS 휠 미제공)
torch               = {version = ">=2.2.0,<2.10.0", optional = true}
torchvision         = {version = ">=0.17.0,<1.0.0", optional = true}
transformers        = ">=4.40.0,<5.0.0"
datasets            = ">=2.19.0,<4.0.0"
accelerate          = ">=0.30.0,<2.0.0"
tokenizers          = ">=0.19.0,<0.22.0"
sentencepiece       = ">=0.1.99,<1.0.0"

# ── 데이터 처리 ───────────────────────────────────────────────────────────
pandas              = ">=2.2.0,<3.0.0"
numpy               = ">=1.26.4,<2.0.0"    # numpy 2.x 호환성 문제 방지
scikit-learn        = ">=1.4.0,<2.0.0"

# ── LangChain + RAG ──────────────────────────────────────────────────────
langchain           = ">=0.3.0,<0.4.0"
langchain-openai    = ">=0.2.0,<0.3.0"
langchain-community = ">=0.3.0,<0.4.0"
langchain-core      = ">=0.3.0,<0.4.0"
faiss-cpu           = ">=1.8.0,<2.0.0"
tiktoken            = ">=0.7.0,<1.0.0"

# ── API / UI ─────────────────────────────────────────────────────────────
fastapi             = ">=0.115.0,<1.0.0"
uvicorn             = {extras = ["standard"], version = ">=0.30.0,<1.0.0"}
python-multipart    = ">=0.0.9,<1.0.0"
gradio              = ">=4.44.0,<5.0.0"    # gradio 5.x API 변경으로 app.py 호환 고정

# ── 설정 ─────────────────────────────────────────────────────────────────
pydantic            = ">=2.7.0,<3.0.0"
pydantic-settings   = ">=2.3.0,<3.0.0"
python-dotenv       = ">=1.0.0,<2.0.0"

# ── 유틸 ─────────────────────────────────────────────────────────────────
requests            = ">=2.32.0,<3.0.0"
tqdm                = ">=4.66.0,<5.0.0"
loguru              = ">=0.7.0,<1.0.0"

[tool.poetry.group.dev.dependencies]
pytest              = "^8.0.0"
pytest-asyncio      = "^0.23.0"
httpx               = "^0.27.0"
ruff                = "^0.4.0"
ipykernel           = "^6.29.0"

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
pythonpath   = ["."]

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
